tutorials/write-you-a-haskell/gen/PolyParser.y
-- Generated by RTK from grammar 'Poly'. Do not edit by hand.
{
{-# LANGUAGE DeriveDataTypeable #-}
module PolyParser where
import qualified Data.Generics as Gen
import qualified PolyLexer as L (Token(..), PosToken(..), AlexPosn(..), alexScanTokens)
}

%name parsePoly
%tokentype { L.PosToken }
%monad { Either String }
%error { parseError }

%token

rtk__eof { L.PosToken _ L.EndOfFile }
tok_Decl_dummy_7 { L.PosToken _ L.Tk__tok_Decl_dummy_7 }
tok_DeclList_dummy_6 { L.PosToken _ L.Tk__tok_DeclList_dummy_6 }
tok_Expr_dummy_5 { L.PosToken _ L.Tk__tok_Expr_dummy_5 }
tok_Id_dummy_4 { L.PosToken _ L.Tk__tok_Id_dummy_4 }
tok_Param_dummy_3 { L.PosToken _ L.Tk__tok_Param_dummy_3 }
tok_Params_dummy_2 { L.PosToken _ L.Tk__tok_Params_dummy_2 }
tok_Poly_dummy_8 { L.PosToken _ L.Tk__tok_Poly_dummy_8 }
tok_true_15 { L.PosToken _ L.Tk__tok_true_15 }
tok_then_8 { L.PosToken _ L.Tk__tok_then_8 }
tok_rec_1 { L.PosToken _ L.Tk__tok_rec_1 }
tok_let_0 { L.PosToken _ L.Tk__tok_let_0 }
tok_in_6 { L.PosToken _ L.Tk__tok_in_6 }
tok_if_7 { L.PosToken _ L.Tk__tok_if_7 }
tok_fix_10 { L.PosToken _ L.Tk__tok_fix_10 }
tok_false_16 { L.PosToken _ L.Tk__tok_false_16 }
tok_else_9 { L.PosToken _ L.Tk__tok_else_9 }
tok__symbol__4 { L.PosToken _ L.Tk__tok__symbol__4 }
tok__eql__eql__11 { L.PosToken _ L.Tk__tok__eql__eql__11 }
tok__eql__2 { L.PosToken _ L.Tk__tok__eql__2 }
tok__semi__3 { L.PosToken _ L.Tk__tok__semi__3 }
tok__minus__symbol__5 { L.PosToken _ L.Tk__tok__minus__symbol__5 }
tok__minus__13 { L.PosToken _ L.Tk__tok__minus__13 }
tok__plus__12 { L.PosToken _ L.Tk__tok__plus__12 }
tok__star__14 { L.PosToken _ L.Tk__tok__star__14 }
tok__rparen__18 { L.PosToken _ L.Tk__tok__rparen__18 }
tok__lparen__17 { L.PosToken _ L.Tk__tok__lparen__17 }
id { L.PosToken _ (L.Tk__id _) }
num { L.PosToken _ (L.Tk__num _) }
qq_Id { L.PosToken _ (L.Tk__qq_Id _) }
qq_Param { L.PosToken _ (L.Tk__qq_Param _) }
qq_Params { L.PosToken _ (L.Tk__qq_Params _) }
qq_Expr { L.PosToken _ (L.Tk__qq_Expr _) }
qq_Decl { L.PosToken _ (L.Tk__qq_Decl _) }
qq_DeclList { L.PosToken _ (L.Tk__qq_DeclList _) }
qq_Poly { L.PosToken _ (L.Tk__qq_Poly _) }

%%

Poly__top : Poly rtk__eof { $1 }

Poly : tok_Poly_dummy_8 Poly tok_Poly_dummy_8 { Ctr__Poly__0 (rtkPosOf $1) $2 } |
       tok_Decl_dummy_7 Decl tok_Decl_dummy_7 { Ctr__Poly__1 (rtkPosOf $1) $2 } |
       tok_DeclList_dummy_6 DeclList tok_DeclList_dummy_6 { Ctr__Poly__2 (rtkPosOf $1) (reverse $2) } |
       tok_Expr_dummy_5 Expr tok_Expr_dummy_5 { Ctr__Poly__3 (rtkPosOf $1) $2 } |
       tok_Id_dummy_4 Id tok_Id_dummy_4 { Ctr__Poly__4 (rtkPosOf $1) $2 } |
       tok_Param_dummy_3 Param tok_Param_dummy_3 { Ctr__Poly__5 (rtkPosOf $1) $2 } |
       tok_Params_dummy_2 Params tok_Params_dummy_2 { Ctr__Poly__6 (rtkPosOf $1) (reverse $2) }

Poly : qq_Poly { Anti_Poly (tkVal_qq_Poly $1) } |
       DeclList { Ctr__Poly__7 (rtkPosOf (reverse $1)) (reverse $1) }

Decl : qq_Decl { Anti_Decl (tkVal_qq_Decl $1) } |
       tok_let_0 tok_rec_1 Id tok__eql__2 Expr tok__semi__3 { Ctr__Decl__0 (rtkPosOf $1) $3 $5 } |
       tok_let_0 tok_rec_1 Id Params tok__eql__2 Expr tok__semi__3 { Ctr__Decl__1 (rtkPosOf $1) $3 (reverse $4) $6 } |
       tok_let_0 Id tok__eql__2 Expr tok__semi__3 { Ctr__Decl__2 (rtkPosOf $1) $2 $4 } |
       tok_let_0 Id Params tok__eql__2 Expr tok__semi__3 { Ctr__Decl__3 (rtkPosOf $1) $2 (reverse $3) $5 } |
       Expr tok__semi__3 { Ctr__Decl__4 (rtkPosOf $1) $1 }

ListElem_DeclList0 : qq_DeclList { Anti_Decl (tkVal_qq_DeclList $1) } |
                     Decl { $1 }

DeclList : {- empty -} { [] } |
           DeclList ListElem_DeclList0 { $2 : $1 }

Atom : qq_Expr { Anti_Expr (tkVal_qq_Expr $1) } |
       num { Ctr__Expr__0 (rtkPosOf $1) (tkVal_num $1) } |
       tok_true_15 { Ctr__Expr__1 (rtkPosOf $1) } |
       tok_false_16 { Ctr__Expr__2 (rtkPosOf $1) } |
       Id { Ctr__Expr__3 (rtkPosOf $1) $1 } |
       tok__lparen__17 Expr tok__rparen__18 { $2 }

App : App Atom { Ctr__Expr__5 (rtkPosOf $1) $1 $2 } |
      Atom { $1 }

Mul : Mul tok__star__14 App { Ctr__Expr__7 (rtkPosOf $1) $1 $3 } |
      App { $1 }

Add : Add tok__plus__12 Mul { Ctr__Expr__9 (rtkPosOf $1) $1 $3 } |
      Add tok__minus__13 Mul { Ctr__Expr__10 (rtkPosOf $1) $1 $3 } |
      Mul { $1 }

Eq : Eq tok__eql__eql__11 Add { Ctr__Expr__12 (rtkPosOf $1) $1 $3 } |
     Add { $1 }

Expr : tok__symbol__4 Params tok__minus__symbol__5 Expr { Ctr__Expr__14 (rtkPosOf $1) (reverse $2) $4 } |
       tok_let_0 tok_rec_1 Id tok__eql__2 Expr tok_in_6 Expr { Ctr__Expr__15 (rtkPosOf $1) $3 $5 $7 } |
       tok_let_0 Id tok__eql__2 Expr tok_in_6 Expr { Ctr__Expr__16 (rtkPosOf $1) $2 $4 $6 } |
       tok_if_7 Expr tok_then_8 Expr tok_else_9 Expr { Ctr__Expr__17 (rtkPosOf $1) $2 $4 $6 } |
       tok_fix_10 Expr { Ctr__Expr__18 (rtkPosOf $1) $2 } |
       Eq { $1 }

Id : qq_Id { Anti_Id (tkVal_qq_Id $1) } |
     id { Ctr__Id__0 (rtkPosOf $1) (tkVal_id $1) }

Param : qq_Param { Anti_Param (tkVal_qq_Param $1) } |
        Id { Ctr__Param__0 (rtkPosOf $1) $1 }

ListElem_Params1 : qq_Params { Anti_Param (tkVal_qq_Params $1) } |
                   Param { $1 }

Params : ListElem_Params1 { [$1] } |
         Params ListElem_Params1 { $2 : $1 }


{
parseError :: [L.PosToken] -> Either String a
parseError [] = Left "unexpected end of input"
parseError (L.PosToken (L.AlexPn _ line col) tok : _) =
    Left $ show line ++ ":" ++ show col ++ ":unexpected " ++ showRtkToken tok

-- Render a token the way it appears in the source, for error messages
showRtkToken :: L.Token -> String
showRtkToken L.EndOfFile = "end of input"
showRtkToken L.Tk__tok_Decl_dummy_7 = "'tok_Decl_dummy_7'"
showRtkToken L.Tk__tok_DeclList_dummy_6 = "'tok_DeclList_dummy_6'"
showRtkToken L.Tk__tok_Expr_dummy_5 = "'tok_Expr_dummy_5'"
showRtkToken L.Tk__tok_Id_dummy_4 = "'tok_Id_dummy_4'"
showRtkToken L.Tk__tok_Param_dummy_3 = "'tok_Param_dummy_3'"
showRtkToken L.Tk__tok_Params_dummy_2 = "'tok_Params_dummy_2'"
showRtkToken L.Tk__tok_Poly_dummy_8 = "'tok_Poly_dummy_8'"
showRtkToken L.Tk__tok_true_15 = "'true'"
showRtkToken L.Tk__tok_then_8 = "'then'"
showRtkToken L.Tk__tok_rec_1 = "'rec'"
showRtkToken L.Tk__tok_let_0 = "'let'"
showRtkToken L.Tk__tok_in_6 = "'in'"
showRtkToken L.Tk__tok_if_7 = "'if'"
showRtkToken L.Tk__tok_fix_10 = "'fix'"
showRtkToken L.Tk__tok_false_16 = "'false'"
showRtkToken L.Tk__tok_else_9 = "'else'"
showRtkToken L.Tk__tok__symbol__4 = "'\\'"
showRtkToken L.Tk__tok__eql__eql__11 = "'=='"
showRtkToken L.Tk__tok__eql__2 = "'='"
showRtkToken L.Tk__tok__semi__3 = "';'"
showRtkToken L.Tk__tok__minus__symbol__5 = "'->'"
showRtkToken L.Tk__tok__minus__13 = "'-'"
showRtkToken L.Tk__tok__plus__12 = "'+'"
showRtkToken L.Tk__tok__star__14 = "'*'"
showRtkToken L.Tk__tok__rparen__18 = "')'"
showRtkToken L.Tk__tok__lparen__17 = "'('"
showRtkToken (L.Tk__id v) = "id " ++ show v
showRtkToken (L.Tk__num v) = "num " ++ show v
showRtkToken (L.Tk__qq_Id v) = "qq_Id " ++ show v
showRtkToken (L.Tk__qq_Param v) = "qq_Param " ++ show v
showRtkToken (L.Tk__qq_Params v) = "qq_Params " ++ show v
showRtkToken (L.Tk__qq_Expr v) = "qq_Expr " ++ show v
showRtkToken (L.Tk__qq_Decl v) = "qq_Decl " ++ show v
showRtkToken (L.Tk__qq_DeclList v) = "qq_DeclList " ++ show v
showRtkToken (L.Tk__qq_Poly v) = "qq_Poly " ++ show v

-- Source position of a node: every constructor except the Anti_* splice
-- artifacts stores the position of its alternative's first symbol in its
-- first field. Positions are transparent for equality and ordering, so two
-- ASTs that differ only in source positions (e.g. a quasi-quote parsed at
-- compile time vs the same construct parsed at run time) compare equal.
newtype RtkPos = RtkPos L.AlexPosn deriving (Show, Gen.Data, Gen.Typeable)
instance Eq RtkPos where _ == _ = True
instance Ord RtkPos where compare _ _ = EQ

-- The position used where no source token exists: empty productions, empty
-- lists, absent optionals and Anti_* quasi-quote splices
rtkNoPos :: RtkPos
rtkNoPos = RtkPos (L.AlexPn 0 0 0)

class RtkPosOf a where
    rtkPosOf :: a -> RtkPos
instance RtkPosOf L.PosToken where
    rtkPosOf (L.PosToken p _) = RtkPos p
instance RtkPosOf a => RtkPosOf [a] where
    rtkPosOf (x : _) = rtkPosOf x
    rtkPosOf []      = rtkNoPos
instance RtkPosOf a => RtkPosOf (Maybe a) where
    rtkPosOf (Just x) = rtkPosOf x
    rtkPosOf Nothing  = rtkNoPos
-- A Char carries no position; this also covers String token payloads
instance RtkPosOf Char where
    rtkPosOf _ = rtkNoPos
instance RtkPosOf Int where rtkPosOf _ = rtkNoPos

-- Recover a token's payload from the whole positioned token: %token
-- bindings keep the L.PosToken so semantic actions can read its position
tkVal_id :: L.PosToken -> String
tkVal_id (L.PosToken _ (L.Tk__id v)) = v
tkVal_id t = error ("rtk internal error: token id expected, got " ++ showRtkToken (L.ptToken t))
tkVal_num :: L.PosToken -> Int
tkVal_num (L.PosToken _ (L.Tk__num v)) = v
tkVal_num t = error ("rtk internal error: token num expected, got " ++ showRtkToken (L.ptToken t))
tkVal_qq_Id :: L.PosToken -> String
tkVal_qq_Id (L.PosToken _ (L.Tk__qq_Id v)) = v
tkVal_qq_Id t = error ("rtk internal error: token qq_Id expected, got " ++ showRtkToken (L.ptToken t))
tkVal_qq_Param :: L.PosToken -> String
tkVal_qq_Param (L.PosToken _ (L.Tk__qq_Param v)) = v
tkVal_qq_Param t = error ("rtk internal error: token qq_Param expected, got " ++ showRtkToken (L.ptToken t))
tkVal_qq_Params :: L.PosToken -> String
tkVal_qq_Params (L.PosToken _ (L.Tk__qq_Params v)) = v
tkVal_qq_Params t = error ("rtk internal error: token qq_Params expected, got " ++ showRtkToken (L.ptToken t))
tkVal_qq_Expr :: L.PosToken -> String
tkVal_qq_Expr (L.PosToken _ (L.Tk__qq_Expr v)) = v
tkVal_qq_Expr t = error ("rtk internal error: token qq_Expr expected, got " ++ showRtkToken (L.ptToken t))
tkVal_qq_Decl :: L.PosToken -> String
tkVal_qq_Decl (L.PosToken _ (L.Tk__qq_Decl v)) = v
tkVal_qq_Decl t = error ("rtk internal error: token qq_Decl expected, got " ++ showRtkToken (L.ptToken t))
tkVal_qq_DeclList :: L.PosToken -> String
tkVal_qq_DeclList (L.PosToken _ (L.Tk__qq_DeclList v)) = v
tkVal_qq_DeclList t = error ("rtk internal error: token qq_DeclList expected, got " ++ showRtkToken (L.ptToken t))
tkVal_qq_Poly :: L.PosToken -> String
tkVal_qq_Poly (L.PosToken _ (L.Tk__qq_Poly v)) = v
tkVal_qq_Poly t = error ("rtk internal error: token qq_Poly expected, got " ++ showRtkToken (L.ptToken t))

data Poly = Ctr__Poly__0 RtkPos Poly |
            Ctr__Poly__1 RtkPos Decl |
            Ctr__Poly__2 RtkPos DeclList |
            Ctr__Poly__3 RtkPos Expr |
            Ctr__Poly__4 RtkPos Id |
            Ctr__Poly__5 RtkPos Param |
            Ctr__Poly__6 RtkPos Params |
            Anti_Poly String |
            Ctr__Poly__7 RtkPos DeclList
            deriving (Ord, Eq, Show, Gen.Data, Gen.Typeable)
instance RtkPosOf Poly where
    rtkPosOf (Ctr__Poly__0 p _) = p
    rtkPosOf (Ctr__Poly__1 p _) = p
    rtkPosOf (Ctr__Poly__2 p _) = p
    rtkPosOf (Ctr__Poly__3 p _) = p
    rtkPosOf (Ctr__Poly__4 p _) = p
    rtkPosOf (Ctr__Poly__5 p _) = p
    rtkPosOf (Ctr__Poly__6 p _) = p
    rtkPosOf (Anti_Poly _) = rtkNoPos
    rtkPosOf (Ctr__Poly__7 p _) = p
data Decl = Anti_Decl String |
            Ctr__Decl__0 RtkPos Id Expr |
            Ctr__Decl__1 RtkPos Id Params Expr |
            Ctr__Decl__2 RtkPos Id Expr |
            Ctr__Decl__3 RtkPos Id Params Expr |
            Ctr__Decl__4 RtkPos Expr
            deriving (Ord, Eq, Show, Gen.Data, Gen.Typeable)
instance RtkPosOf Decl where
    rtkPosOf (Anti_Decl _) = rtkNoPos
    rtkPosOf (Ctr__Decl__0 p _ _) = p
    rtkPosOf (Ctr__Decl__1 p _ _ _) = p
    rtkPosOf (Ctr__Decl__2 p _ _) = p
    rtkPosOf (Ctr__Decl__3 p _ _ _) = p
    rtkPosOf (Ctr__Decl__4 p _) = p
type DeclList = [Decl]
data Expr = Anti_Expr String |
            Ctr__Expr__0 RtkPos Int |
            Ctr__Expr__1 RtkPos |
            Ctr__Expr__2 RtkPos |
            Ctr__Expr__3 RtkPos Id |
            Ctr__Expr__5 RtkPos Expr Expr |
            Ctr__Expr__7 RtkPos Expr Expr |
            Ctr__Expr__9 RtkPos Expr Expr |
            Ctr__Expr__10 RtkPos Expr Expr |
            Ctr__Expr__12 RtkPos Expr Expr |
            Ctr__Expr__14 RtkPos Params Expr |
            Ctr__Expr__15 RtkPos Id Expr Expr |
            Ctr__Expr__16 RtkPos Id Expr Expr |
            Ctr__Expr__17 RtkPos Expr Expr Expr |
            Ctr__Expr__18 RtkPos Expr
            deriving (Ord, Eq, Show, Gen.Data, Gen.Typeable)
instance RtkPosOf Expr where
    rtkPosOf (Anti_Expr _) = rtkNoPos
    rtkPosOf (Ctr__Expr__0 p _) = p
    rtkPosOf (Ctr__Expr__1 p) = p
    rtkPosOf (Ctr__Expr__2 p) = p
    rtkPosOf (Ctr__Expr__3 p _) = p
    rtkPosOf (Ctr__Expr__5 p _ _) = p
    rtkPosOf (Ctr__Expr__7 p _ _) = p
    rtkPosOf (Ctr__Expr__9 p _ _) = p
    rtkPosOf (Ctr__Expr__10 p _ _) = p
    rtkPosOf (Ctr__Expr__12 p _ _) = p
    rtkPosOf (Ctr__Expr__14 p _ _) = p
    rtkPosOf (Ctr__Expr__15 p _ _ _) = p
    rtkPosOf (Ctr__Expr__16 p _ _ _) = p
    rtkPosOf (Ctr__Expr__17 p _ _ _) = p
    rtkPosOf (Ctr__Expr__18 p _) = p
data Id = Anti_Id String |
          Ctr__Id__0 RtkPos String
          deriving (Ord, Eq, Show, Gen.Data, Gen.Typeable)
instance RtkPosOf Id where
    rtkPosOf (Anti_Id _) = rtkNoPos
    rtkPosOf (Ctr__Id__0 p _) = p
data Param = Anti_Param String |
             Ctr__Param__0 RtkPos Id
             deriving (Ord, Eq, Show, Gen.Data, Gen.Typeable)
instance RtkPosOf Param where
    rtkPosOf (Anti_Param _) = rtkNoPos
    rtkPosOf (Ctr__Param__0 p _) = p
type Params = [Param]
}
