tutorials/write-you-a-haskell/gen/PolyParser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.2 from tutorials/write-you-a-haskell/gen/PolyParser.y
-----------------------------------------------------------------------------

state 10 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parsePoly -> Poly__top                      (0)
	Poly__top -> Poly rtk__eof                         (1)
	Poly -> tok_Poly_dummy_8 Poly tok_Poly_dummy_8     (2)
	Poly -> tok_Decl_dummy_7 Decl tok_Decl_dummy_7     (3)
	Poly -> tok_DeclList_dummy_6 DeclList tok_DeclList_dummy_6   (4)
	Poly -> tok_Expr_dummy_5 Expr tok_Expr_dummy_5     (5)
	Poly -> tok_Id_dummy_4 Id tok_Id_dummy_4           (6)
	Poly -> tok_Param_dummy_3 Param tok_Param_dummy_3   (7)
	Poly -> tok_Params_dummy_2 Params tok_Params_dummy_2   (8)
	Poly -> qq_Poly                                    (9)
	Poly -> DeclList                                   (10)
	Decl -> qq_Decl                                    (11)
	Decl -> tok_let_0 tok_rec_1 Id tok__eql__2 Expr tok__semi__3   (12)
	Decl -> tok_let_0 tok_rec_1 Id Params tok__eql__2 Expr tok__semi__3   (13)
	Decl -> tok_let_0 Id tok__eql__2 Expr tok__semi__3   (14)
	Decl -> tok_let_0 Id Params tok__eql__2 Expr tok__semi__3   (15)
	Decl -> Expr tok__semi__3                          (16)
	ListElem_DeclList0 -> qq_DeclList                  (17)
	ListElem_DeclList0 -> Decl                         (18)
	DeclList ->                                        (19)
	DeclList -> DeclList ListElem_DeclList0            (20)
	Atom -> qq_Expr                                    (21)
	Atom -> num                                        (22)
	Atom -> tok_true_15                                (23)
	Atom -> tok_false_16                               (24)
	Atom -> Id                                         (25)
	Atom -> tok__lparen__17 Expr tok__rparen__18       (26)
	App -> App Atom                                    (27)
	App -> Atom                                        (28)
	Mul -> Mul tok__star__14 App                       (29)
	Mul -> App                                         (30)
	Add -> Add tok__plus__12 Mul                       (31)
	Add -> Add tok__minus__13 Mul                      (32)
	Add -> Mul                                         (33)
	Eq -> Eq tok__eql__eql__11 Add                     (34)
	Eq -> Add                                          (35)
	Expr -> tok__symbol__4 Params tok__minus__symbol__5 Expr   (36)
	Expr -> tok_let_0 tok_rec_1 Id tok__eql__2 Expr tok_in_6 Expr   (37)
	Expr -> tok_let_0 Id tok__eql__2 Expr tok_in_6 Expr   (38)
	Expr -> tok_if_7 Expr tok_then_8 Expr tok_else_9 Expr   (39)
	Expr -> tok_fix_10 Expr                            (40)
	Expr -> Eq                                         (41)
	Id -> qq_Id                                        (42)
	Id -> id                                           (43)
	Param -> qq_Param                                  (44)
	Param -> Id                                        (45)
	ListElem_Params1 -> qq_Params                      (46)
	ListElem_Params1 -> Param                          (47)
	Params -> ListElem_Params1                         (48)
	Params -> Params ListElem_Params1                  (49)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	rtk__eof       { L.PosToken _ L.EndOfFile }
	tok_Decl_dummy_7{ L.PosToken _ L.Tk__tok_Decl_dummy_7 }
	tok_DeclList_dummy_6{ L.PosToken _ L.Tk__tok_DeclList_dummy_6 }
	tok_Expr_dummy_5{ L.PosToken _ L.Tk__tok_Expr_dummy_5 }
	tok_Id_dummy_4 { L.PosToken _ L.Tk__tok_Id_dummy_4 }
	tok_Param_dummy_3{ L.PosToken _ L.Tk__tok_Param_dummy_3 }
	tok_Params_dummy_2{ L.PosToken _ L.Tk__tok_Params_dummy_2 }
	tok_Poly_dummy_8{ L.PosToken _ L.Tk__tok_Poly_dummy_8 }
	tok_true_15    { L.PosToken _ L.Tk__tok_true_15 }
	tok_then_8     { L.PosToken _ L.Tk__tok_then_8 }
	tok_rec_1      { L.PosToken _ L.Tk__tok_rec_1 }
	tok_let_0      { L.PosToken _ L.Tk__tok_let_0 }
	tok_in_6       { L.PosToken _ L.Tk__tok_in_6 }
	tok_if_7       { L.PosToken _ L.Tk__tok_if_7 }
	tok_fix_10     { L.PosToken _ L.Tk__tok_fix_10 }
	tok_false_16   { L.PosToken _ L.Tk__tok_false_16 }
	tok_else_9     { L.PosToken _ L.Tk__tok_else_9 }
	tok__symbol__4 { L.PosToken _ L.Tk__tok__symbol__4 }
	tok__eql__eql__11{ L.PosToken _ L.Tk__tok__eql__eql__11 }
	tok__eql__2    { L.PosToken _ L.Tk__tok__eql__2 }
	tok__semi__3   { L.PosToken _ L.Tk__tok__semi__3 }
	tok__minus__symbol__5{ L.PosToken _ L.Tk__tok__minus__symbol__5 }
	tok__minus__13 { L.PosToken _ L.Tk__tok__minus__13 }
	tok__plus__12  { L.PosToken _ L.Tk__tok__plus__12 }
	tok__star__14  { L.PosToken _ L.Tk__tok__star__14 }
	tok__rparen__18{ L.PosToken _ L.Tk__tok__rparen__18 }
	tok__lparen__17{ L.PosToken _ L.Tk__tok__lparen__17 }
	id             { L.PosToken _ (L.Tk__id _) }
	num            { L.PosToken _ (L.Tk__num _) }
	qq_Id          { L.PosToken _ (L.Tk__qq_Id _) }
	qq_Param       { L.PosToken _ (L.Tk__qq_Param _) }
	qq_Params      { L.PosToken _ (L.Tk__qq_Params _) }
	qq_Expr        { L.PosToken _ (L.Tk__qq_Expr _) }
	qq_Decl        { L.PosToken _ (L.Tk__qq_Decl _) }
	qq_DeclList    { L.PosToken _ (L.Tk__qq_DeclList _) }
	qq_Poly        { L.PosToken _ (L.Tk__qq_Poly _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parsePoly rule  0
	Poly__top       rule  1
	Poly            rules 2, 3, 4, 5, 6, 7, 8, 9, 10
	Decl            rules 11, 12, 13, 14, 15, 16
	ListElem_DeclList0 rules 17, 18
	DeclList        rules 19, 20
	Atom            rules 21, 22, 23, 24, 25, 26
	App             rules 27, 28
	Mul             rules 29, 30
	Add             rules 31, 32, 33
	Eq              rules 34, 35
	Expr            rules 36, 37, 38, 39, 40, 41
	Id              rules 42, 43
	Param           rules 44, 45
	ListElem_Params1 rules 46, 47
	Params          rules 48, 49

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parsePoly -> . Poly__top                     (rule 0)

	rtk__eof       reduce using rule 19
	tok_Decl_dummy_7shift, and enter state 4
	tok_DeclList_dummy_6shift, and enter state 5
	tok_Expr_dummy_5shift, and enter state 6
	tok_Id_dummy_4 shift, and enter state 7
	tok_Param_dummy_3shift, and enter state 8
	tok_Params_dummy_2shift, and enter state 9
	tok_Poly_dummy_8shift, and enter state 10
	tok_true_15    reduce using rule 19
	tok_let_0      reduce using rule 19
	tok_if_7       reduce using rule 19
	tok_fix_10     reduce using rule 19
	tok_false_16   reduce using rule 19
	tok__symbol__4 reduce using rule 19
	tok__lparen__17reduce using rule 19
	id             reduce using rule 19
	num            reduce using rule 19
	qq_Id          reduce using rule 19
	qq_Expr        reduce using rule 19
	qq_Decl        reduce using rule 19
	qq_DeclList    reduce using rule 19
	qq_Poly        shift, and enter state 11

	Poly__top      goto state 12
	Poly           goto state 2
	DeclList       goto state 3

State 1

	Poly__top -> . Poly rtk__eof                        (rule 1)

	tok_Decl_dummy_7shift, and enter state 4
	tok_DeclList_dummy_6shift, and enter state 5
	tok_Expr_dummy_5shift, and enter state 6
	tok_Id_dummy_4 shift, and enter state 7
	tok_Param_dummy_3shift, and enter state 8
	tok_Params_dummy_2shift, and enter state 9
	tok_Poly_dummy_8shift, and enter state 10
	qq_Poly        shift, and enter state 11

	Poly           goto state 2
	DeclList       goto state 3

State 2

	Poly__top -> Poly . rtk__eof                        (rule 1)

	rtk__eof       shift, and enter state 48


State 3

	Poly -> DeclList .                                  (rule 10)
	DeclList -> DeclList . ListElem_DeclList0           (rule 20)

	rtk__eof       reduce using rule 10
	tok_Poly_dummy_8reduce using rule 10
	tok_true_15    shift, and enter state 31
	tok_let_0      shift, and enter state 43
	tok_if_7       shift, and enter state 33
	tok_fix_10     shift, and enter state 34
	tok_false_16   shift, and enter state 35
	tok__symbol__4 shift, and enter state 36
	tok__lparen__17shift, and enter state 37
	id             shift, and enter state 18
	num            shift, and enter state 38
	qq_Id          shift, and enter state 19
	qq_Expr        shift, and enter state 39
	qq_Decl        shift, and enter state 44
	qq_DeclList    shift, and enter state 47

	Decl           goto state 45
	ListElem_DeclList0goto state 46
	Atom           goto state 24
	App            goto state 25
	Mul            goto state 26
	Add            goto state 27
	Eq             goto state 28
	Expr           goto state 42
	Id             goto state 30

State 4

	Poly -> tok_Decl_dummy_7 . Decl tok_Decl_dummy_7    (rule 3)

	tok_true_15    shift, and enter state 31
	tok_let_0      shift, and enter state 43
	tok_if_7       shift, and enter state 33
	tok_fix_10     shift, and enter state 34
	tok_false_16   shift, and enter state 35
	tok__symbol__4 shift, and enter state 36
	tok__lparen__17shift, and enter state 37
	id             shift, and enter state 18
	num            shift, and enter state 38
	qq_Id          shift, and enter state 19
	qq_Expr        shift, and enter state 39
	qq_Decl        shift, and enter state 44

	Decl           goto state 41
	Atom           goto state 24
	App            goto state 25
	Mul            goto state 26
	Add            goto state 27
	Eq             goto state 28
	Expr           goto state 42
	Id             goto state 30

State 5

	Poly -> tok_DeclList_dummy_6 . DeclList tok_DeclList_dummy_6    (rule 4)

	tok_DeclList_dummy_6reduce using rule 19
	tok_true_15    reduce using rule 19
	tok_let_0      reduce using rule 19
	tok_if_7       reduce using rule 19
	tok_fix_10     reduce using rule 19
	tok_false_16   reduce using rule 19
	tok__symbol__4 reduce using rule 19
	tok__lparen__17reduce using rule 19
	id             reduce using rule 19
	num            reduce using rule 19
	qq_Id          reduce using rule 19
	qq_Expr        reduce using rule 19
	qq_Decl        reduce using rule 19
	qq_DeclList    reduce using rule 19

	DeclList       goto state 40

State 6

	Poly -> tok_Expr_dummy_5 . Expr tok_Expr_dummy_5    (rule 5)

	tok_true_15    shift, and enter state 31
	tok_let_0      shift, and enter state 32
	tok_if_7       shift, and enter state 33
	tok_fix_10     shift, and enter state 34
	tok_false_16   shift, and enter state 35
	tok__symbol__4 shift, and enter state 36
	tok__lparen__17shift, and enter state 37
	id             shift, and enter state 18
	num            shift, and enter state 38
	qq_Id          shift, and enter state 19
	qq_Expr        shift, and enter state 39

	Atom           goto state 24
	App            goto state 25
	Mul            goto state 26
	Add            goto state 27
	Eq             goto state 28
	Expr           goto state 29
	Id             goto state 30

State 7

	Poly -> tok_Id_dummy_4 . Id tok_Id_dummy_4          (rule 6)

	id             shift, and enter state 18
	qq_Id          shift, and enter state 19

	Id             goto state 23

State 8

	Poly -> tok_Param_dummy_3 . Param tok_Param_dummy_3    (rule 7)

	id             shift, and enter state 18
	qq_Id          shift, and enter state 19
	qq_Param       shift, and enter state 20

	Id             goto state 14
	Param          goto state 22

State 9

	Poly -> tok_Params_dummy_2 . Params tok_Params_dummy_2    (rule 8)

	id             shift, and enter state 18
	qq_Id          shift, and enter state 19
	qq_Param       shift, and enter state 20
	qq_Params      shift, and enter state 21

	Id             goto state 14
	Param          goto state 15
	ListElem_Params1goto state 16
	Params         goto state 17

State 10

	Poly -> tok_Poly_dummy_8 . Poly tok_Poly_dummy_8    (rule 2)

	tok_Decl_dummy_7shift, and enter state 4
	tok_DeclList_dummy_6shift, and enter state 5
	tok_Expr_dummy_5shift, and enter state 6
	tok_Id_dummy_4 shift, and enter state 7
	tok_Param_dummy_3shift, and enter state 8
	tok_Params_dummy_2shift, and enter state 9
	tok_Poly_dummy_8shift, and enter state 10
			(reduce using rule 19)

	tok_true_15    reduce using rule 19
	tok_let_0      reduce using rule 19
	tok_if_7       reduce using rule 19
	tok_fix_10     reduce using rule 19
	tok_false_16   reduce using rule 19
	tok__symbol__4 reduce using rule 19
	tok__lparen__17reduce using rule 19
	id             reduce using rule 19
	num            reduce using rule 19
	qq_Id          reduce using rule 19
	qq_Expr        reduce using rule 19
	qq_Decl        reduce using rule 19
	qq_DeclList    reduce using rule 19
	qq_Poly        shift, and enter state 11

	Poly           goto state 13
	DeclList       goto state 3

State 11

	Poly -> qq_Poly .                                   (rule 9)

	rtk__eof       reduce using rule 9
	tok_Poly_dummy_8reduce using rule 9


State 12

	%start_parsePoly -> Poly__top .                     (rule 0)

	%eof           accept


State 13

	Poly -> tok_Poly_dummy_8 Poly . tok_Poly_dummy_8    (rule 2)

	tok_Poly_dummy_8shift, and enter state 70


State 14

	Param -> Id .                                       (rule 45)

	tok_Param_dummy_3reduce using rule 45
	tok_Params_dummy_2reduce using rule 45
	tok__eql__2    reduce using rule 45
	tok__minus__symbol__5reduce using rule 45
	id             reduce using rule 45
	qq_Id          reduce using rule 45
	qq_Param       reduce using rule 45
	qq_Params      reduce using rule 45


State 15

	ListElem_Params1 -> Param .                         (rule 47)

	tok_Params_dummy_2reduce using rule 47
	tok__eql__2    reduce using rule 47
	tok__minus__symbol__5reduce using rule 47
	id             reduce using rule 47
	qq_Id          reduce using rule 47
	qq_Param       reduce using rule 47
	qq_Params      reduce using rule 47


State 16

	Params -> ListElem_Params1 .                        (rule 48)

	tok_Params_dummy_2reduce using rule 48
	tok__eql__2    reduce using rule 48
	tok__minus__symbol__5reduce using rule 48
	id             reduce using rule 48
	qq_Id          reduce using rule 48
	qq_Param       reduce using rule 48
	qq_Params      reduce using rule 48


State 17
